Remove duplicate test